--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -582,3 +582,44 @@ public:
 };
 ```
 
+### 293. 滑动窗口最大值 [Hard] *
+> 一个整数数组 nums，有一个大小为 k 的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口内的 k 个数字。滑动窗口每次只向右移动一位，求每个窗口的最大值
+- 双向队列解题
+  - deque<int>window，用于存储下标。这个变量有以下特点:
+  - 变量的最前端（也就是 window.front()）是**此次遍历的最大值的下标**
+  - **当我们遇到新的数时，将新的数和双项队列的末尾（也就是window.back()）比较，如果末尾比新数小，则把末尾扔掉，直到该队列的末尾比新数大或者队列为空的时候才停止**，做法有点像使用栈进行括号匹配。
+  - 双项队列中的所有值都要在窗口范围内
+- 关键逻辑： 元素入队操作和队列合法判断
+- 时间复杂度 O(N) 空间复杂度O(k)
+```
+class Solution {
+public:
+    vector<int> maxSlidingWindow(vector<int>& nums, int k) {
+        // 双向队列解题 维护队首值最大
+        if (nums.empty() || k == 0)
+            return nums;
+        deque<int> window;
+        vector<int> ans;
+        for (int i = 0; i < k; i++) {
+            while(!window.empty() && nums[i] > nums[window.back()]) {
+                window.pop_back();
+            }
+            window.push_back(i);
+        } 
+        ans.push_back(nums[window.front()]);
+        for (int i = k; i < nums.size(); i++) {
+            // 如果已经超出当前窗口 将队首进行出栈
+            if (!window.empty() && i - k >= window.front()) {
+                window.pop_front();
+            }
+            while (!window.empty() && nums[i] > nums[window.back()]) {
+                window.pop_back();
+            }
+            window.push_back(i);
+            ans.push_back(nums[window.front()]);
+        }
+        return ans;
+
+    }
+};
+```
