--- a/图.md
+++ b/图.md
@@ -3,4 +3,180 @@
 
 有向图
 
-拓扑排序https://blog.csdn.net/qq_37653144/article/details/83215196
+[TOC]
+### 拓扑排序
+- 将一个**有向无环图**(Directed Acyclic Graph简称DAG)进行排序进而得到**一个有序的线性序列**
+
+
+>一个项目包括A、B、C、D四个子部分来完成，并且A依赖于B和D，C依赖于D。现在要制定一个计划，写出A、B、C、D的执行顺序。这时，就可以利用到拓扑排序，它就是用来确定事物发生的顺序的。
+
+- 在拓扑排序中，如果存在一条从顶点A到顶点B的路径，那么在排序结果中B出现在A的后面
+
+#### 原理与应用
+
+拓扑排序算法主要是循环执行以下两步，**直到不存在入度为0的顶点为止**。
+
+1. 选择一个入度为0的顶点并输出之；
+2. **从图中删除此顶点及所有出边**
+3. 若循环结束后，输出的顶点数小于网中的顶点数，则**说明图有环**，否则输出的顶点序列就是一种拓扑序列
+
+
+https://www.cnblogs.com/skywang12345/p/3711493.html
+#### 实现
+https://blog.csdn.net/qq_37653144/article/details/83215196
+
+- 输入：
+  - 第一行输入两个整数n和m，n表示途中节点数，m表示途中边数；接下来输入m行，每一行有两个整数v1和v2，v1和v2分别代表编号为v1、v2的节点，每行代表一条由v1指向v2的边（节点编号从0开始）
+- 输出：
+  - 若途中存在环，给出提示；否则输出拓扑排序后的序列
+
+> 4 5
+0 1
+0 2
+0 3
+1 2
+3 2 
+
+> 0 3 1 2
+```
+/*拓扑排序实现*/
+
+#include<iostream>
+#include<vector>
+#include<list>
+#include<stack>
+
+using namespace std;
+
+vector<list<int> > adj; // 图的邻接表
+vector<int> inDegree; // 节点入度
+queue<int> st; // 记录零入度的节点
+
+// 构建图  统计节点入度
+void creatGraph() {
+    int n, m, v1,  v2;
+    cin >> n >> m;
+    // 初始化邻接表
+    adj.assign(n, list<int>());
+    inDegree.assign(n, 0);
+    while(m -- ) {
+        cin >> v1 >> v2;
+        adj[v1].push_back(v2);
+        inDegree[v2] ++;
+    }
+    for (int i = 0; i < n; i++) {
+        if (inDegree[i] == 0)
+            st.push(i);
+    }
+
+}
+// 拓扑排序
+void tpSort() {
+    int cur;
+    vector<int> ans;
+    while(!st.empty()) {
+        cur = st.top();
+        st.pop();
+        ans.push_back(cur);// 记录当前出栈的节点
+        for (list<int>::iterator iter = adj[cur].begin(); iter != adj[cur].end(); iter++) {
+            inDegree[*iter]--;
+            if (inDegree[*iter] == 0) 
+                st.push(*iter);
+        }
+    }
+    if (ans.size() != adj.size()) {
+        cout << "图有环" << endl;
+    }
+    else {
+        for (int i = 0; i < ans.size(); i++) {
+            cout << ans[i] << " ";
+        }
+        cout << endl;
+    }
+}
+
+int main() {
+    creatGraph();
+    tpSort();
+    return 0;
+}
+```
+
+### 207. 课程表 [Medium]
+- 给出不同课程的前置依赖，判断能否修完
+- 即使用拓扑排序完成图是否为有向无环的判断
+  - 与上面相同基于bfs的思想，借助队列进行入度管理
+  - 时间复杂度 O(m+n)
+
+```
+class Solution {
+public:
+    bool canFinish(int numCourses, vector<vector<int>>& prerequisites) {
+        vector<int> inDegree (numCourses);
+        vector<vector<int>> adj(numCourses, vector<int>());
+        queue<int> q;
+        int ans = 0;
+        for (int i = 0; i < prerequisites.size(); i++) {
+            int pre = prerequisites[i][1];
+            int next = prerequisites[i][0];
+            adj[pre].push_back(next);
+            inDegree[next]++;
+        }
+        for (int i = 0; i < numCourses; i++) {
+            if (inDegree[i] == 0) 
+                q.push(i);
+        }
+        while( !q.empty()) {
+            int cur = q.front();
+            q.pop();
+            ans++;
+            for (auto s : adj[cur]) {
+                inDegree[s]--;
+                if (inDegree[s] == 0)
+                    q.push(s);
+            }
+        }
+        cout << ans;
+        return ans == numCourses;
+
+    }
+};
+```
+
+### 210. 课程表 II
+- 在上题的基础上要求给出课程顺序，即返回一个拓扑排序的结果；
+- 在上面保存即可
+```
+class Solution {
+public:
+    vector<int> findOrder(int numCourses, vector<vector<int>>& prerequisites) {
+        vector<int> inDegree (numCourses);
+        vector<vector<int>> adj(numCourses, vector<int>());
+        queue<int> q;
+        vector<int> ans;
+        for (int i = 0; i < prerequisites.size(); i++) {
+            int pre = prerequisites[i][1];
+            int next = prerequisites[i][0];
+            adj[pre].push_back(next);
+            inDegree[next]++;
+        }
+        for (int i = 0; i < numCourses; i++) {
+            if (inDegree[i] == 0) 
+                q.push(i);
+        }
+        while( !q.empty()) {
+            int cur = q.front();
+            q.pop();
+            ans.push_back(cur);
+            for (auto s : adj[cur]) {
+                inDegree[s]--;
+                if (inDegree[s] == 0)
+                    q.push(s);
+            }
+        }
+        if (ans.size() != numCourses)
+            ans.clear();
+        return ans;
+    }
+};
+```
