--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -1,10 +1,6 @@
 
 [TOC]
 ## 动态规划
-
-
-
-
 ### 70. 爬楼梯问题
 - 递归公式：f(n)=f(n-1)+f(n-2) 递归解法会超时
 - 使用简单的动态规划解决
@@ -892,3 +888,7 @@ public:
     }
 };
 ```
+
+### 补充： 最小编辑代价
+
+https://www.it610.com/article/1176869420593655808.htm
