--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -132,6 +132,7 @@ public:
 直接调用sort函数进行
 
 #### 只出现一次的数字
+> 给定一个非空整数数组，除了**某个元素只出现一次以外**，其余每个元素均出现两次。找出那个只出现了一次的元素
 https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x21ib6/
 
 要求是线性时间、不占额外内存；
@@ -178,7 +179,66 @@ public:
     }
 };
 ```
+### 137. 只出现过一次的数字
+- 给你一个整数数组 nums ，除某个元素仅出现 一次 外，其余每个元素都恰出现三次
+```
+class Solution {
+public:
+    int singleNumber(vector<int>& nums) {
+        int seen_once = 0;
+        int seen_twice = 0;
+        for (auto p : nums) {
+            seen_once = ~seen_twice&(seen_once ^ p);
+            seen_twice = ~seen_once&(seen_twice ^ p);
+        }
+        return seen_once;
+    }
+};
+```
 
+### 260. 只出现过一次的数字 II 
+
+> 给定一个整数数组 nums，其中恰好有两个元素只出现一次，**其余所有元素均出现两次**。 找出只出现一次的那两个元素。你可以按 任意顺序 返回答案。
+- 基础做法：哈希表构建，然后直接搜索即可
+- 进阶做法，在上一题的基础上，使用异或运算
+  - 考虑异或操作的性质：**对于两个操作数的每一位，相同结果为 00，不同结果为 11**。那么在计算过程中，成对出现的数字的所有位会两两抵消为 00，最终得到的结果就是那个出现了一次的数字。
+  - 如果我们可以把所有数字分成两组，使得：
+    - 两个只出现一次的数字在不同的组中；
+    - **相同的数字会被分到相同的组中**。
+  - 那么对两个组分别进行异或操作，即可得到答案的两个数字
+https://leetcode-cn.com/problems/single-number-iii/solution/zhi-chu-xian-yi-ci-de-shu-zi-iii-by-leet-4i8e/
+    - 通过取全部数字异或后的结果x，根据x的位数进行分组，x_i = 1 表示两数不同，x_i = 0表示两数相同，得到满足以上要求的分组
+    - 然后对两组内的元素进行异或，得到结果。
+
+- 时间复杂度： O(N) 空间复杂度O(1)
+```
+class Solution {
+public:
+    vector<int> singleNumber(vector<int>& nums) {
+        int x = 0;
+        for (int i = 0; i < nums.size(); i++) {
+            x ^= nums[i];
+        }
+        int l = 1; // 计算1最低位
+        while( (l & x) == 0) {
+            l <<= 1;
+        }
+        int a = 0;
+        int b = 0;
+        // 根据最后的异或位置进行分组
+        
+        for (auto s : nums) {
+            if (s & l) {
+                a ^= s;
+            }
+            else {
+                b ^= s;
+            }
+        }
+        return vector<int>({a,b});
+    }
+};
+```
 
 #### 350. 两个数组的交集2
 https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2y0c2/
