--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -889,6 +889,141 @@ public:
 };
 ```
 
-### 补充： 最小编辑代价
+### 补充： 最小编辑代价 [ByteDance]
+在编辑距离上的改动：
+> 给定两个字符串str1和str2，再给定三个整数ic，dc，rc，**分别代表插入、删除、替换一个字符的代价**，返回将str1编辑成str2的最小代价。
 
+- 编辑距离问题中没有涉及到不同方式的代价，都是1；
+- 修改状态转移公式： `dp[i][j] = min(dp[i][j-1] + ic,  dp[i-1][j] + dc, dp[i-1][j-1] /  dp[i-1][j-1] + rc)`
+  - 当`str1[i]!=str[j]` 时， 从str1[i] 转移到 str2[j]需要把[i]/[j]进行替换，所以加上的时rc 
+  - 其他ic / dc都是**ß本质上考察对状态转移公式的理解**
+  - 状态初始化： `dp[0][j] = ic*j`   `dp[i][0] = dc*i`   
 https://www.it610.com/article/1176869420593655808.htm
+
+
+### 64. 最小路径和
+> 给定一个包含非负整数的 m x n 网格 grid ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
+> 说明：每次只能向下或者向右移动一步。
+
+- 基础dp
+- 状态转移公式： `dp[i][j] = min(dp[i-1][j], dp[i][j-1]) + grid[i][j]`
+  - 初始化： 将dp[i][0]/ dp[0][j]初始化
+  - 时间复杂度 O（N^2） 空间复杂度 O(N^2)
+```
+class Solution {
+public:
+    int minPathSum(vector<vector<int>>& grid) {
+        int m = grid.size();
+        int n = grid[0].size();
+        vector<vector<int>> dp(m, vector<int> (n));
+        dp[0][0] = grid[0][0];
+        for (int i = 1; i < m; i++) {
+            dp[i][0] = dp[i-1][0] + grid[i][0];
+        }
+        for (int i = 1; i < n; i++) {
+            dp[0][i] = dp[0][i-1] + grid[0][i];
+        }
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                dp[i][j] = min(dp[i-1][j], dp[i][j-1]) + grid[i][j];
+            }
+        }
+        return dp[m-1][n-1];
+    }
+
+};
+```
+- 空间压缩
+    - 使用原位dp，直接在grid二维数组中进行修改
+```
+class Solution {
+public:
+    int minPathSum(vector<vector<int>>& grid) {
+        int m = grid.size();
+        int n = grid[0].size();
+        for (int i = 1; i <n; i++) {
+            grid[0][i] += grid[0][i-1];
+        }
+        for (int i = 1; i <m; i++) {
+            grid[i][0] += grid[i-1][0];
+        }
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                grid[i][j] += min(grid[i-1][j], grid[i][j-1]);
+            }
+        }
+        return grid[m-1][n-1];
+    }
+
+};
+```
+
+### 120. 三角形最小路径和 [Red 小红书]
+> 给定一个三角形 triangle ，找出自顶向下的最小路径和。
+> 每一步只能移动到下一行中相邻的结点上。相邻的结点 在这里指的是 下标 与 上一层结点下标 相同或者等于 上一层结点下标 + 1 的两个结点
+
+- `dp[i][j] = min(dp[i-1][j-1],dp[i-1][j]) + num[i][j]` 对边界的情况要特殊处理： `dp[i][0] = dp[i-1][0] + num[i][j] , dp[i][r]=dp[i-1][r] + num[i][j] `
+- 对只有一层的临界情况进行直接返回
+
+```
+class Solution {
+public:
+    int minimumTotal(vector<vector<int>>& triangle) {
+        int n = triangle.size();
+        int m = triangle.back().size();
+        vector<vector<int>> dp(n, vector<int>(m));
+        dp[0][0] = triangle[0][0];
+        int ans = INT_MAX;
+        if (n == 1) {
+            return triangle[0][0];
+        }
+        for (int i = 1; i < n; i++) {
+            for (int j = 0; j < triangle[i].size(); j++) {
+                if (j == 0)
+                    dp[i][j] = dp[i-1][j] + triangle[i][j];
+                else if (j == triangle[i].size() - 1) {
+                    dp[i][j] = dp[i-1][j-1] + triangle[i][j];
+                }
+                else {
+                    dp[i][j] = min(dp[i-1][j], dp[i-1][j-1]) + triangle[i][j];
+                }
+                if (i == n - 1) ans = min(dp[i][j], ans);
+            }
+        }
+        return ans;
+    }
+};
+```
+- 空间压缩： 原位DP
+
+```
+class Solution {
+public:
+    int minimumTotal(vector<vector<int>>& triangle) {
+        int n = triangle.size();
+        int m = triangle.back().size();
+        //vector<vector<int>> dp(n, vector<int>(m));
+         
+        int ans = INT_MAX;
+        if (n == 1) {
+            return triangle[0][0];
+        }
+        for (int i = 1; i < n; i++) {
+            for (int j = 0; j < triangle[i].size(); j++) {
+                if (j == 0)
+                    triangle[i][j] += triangle[i-1][j] ;
+                else if (j == triangle[i].size() - 1) {
+                    triangle[i][j] += triangle[i-1][j-1] ;
+                }
+                else {
+                    triangle[i][j] += min(triangle[i-1][j], triangle[i-1][j-1]);
+                }
+                if (i == n - 1) ans = min(triangle[i][j], ans);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+### 
