--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -1,5 +1,5 @@
 
-
+[TOC]
 ### 15. 3Sum [Medium]
 - 从无序数组中找出三个非重复元素和等于目标值
 - TwoSum的升级
@@ -623,3 +623,98 @@ public:
     }
 };
 ```
+
+###  41.缺失的第一个正数
+> 给你一个未排序的整数数组 nums ，请你找出其中没有出现的最小的正整数。
+
+- 数组的正整数范围在[1, n];
+- 可以将目前数组nums中在上述范围上的数字移动到对应位置： nums[i] = i + 1;
+  - **细节是魔鬼** 要连续移动至 nums[i] = nums[nums[i] - 1]， 避免单次移动出现遗漏
+  - 之后遍历数组返回第一个`nums[i]!= i + 1`的情况
+- 时间复杂度 O(N) 空间复杂度O(1)
+   
+```
+class Solution {
+public:
+    int firstMissingPositive(vector<int>& nums) {
+        int n = nums.size();
+        for (int i = 0; i < n; i++) {
+            // 连续移动， 避免被移动到遍历过的位置的数字存在合理
+            while (nums[i] >= 1 && nums[i] <= n && nums[i] != nums[nums[i] - 1]) {
+                swap(nums[i], nums[nums[i] - 1]);
+            }
+        }
+        for (int i = 0; i < n ; i++) {
+            if (nums[i] != i + 1)
+                return i + 1;
+        }
+        cout << n <<endl;
+        return n + 1;
+    }
+};
+```
+
+### 76. 最小覆盖子串 [Hard] * [字节/百度]
+> 一个字符串 s 、一个字符串 t 。返回 s 中涵盖 t 所有字符的最小子串。如果 s 中不存在涵盖 t 所有字符的子串，则返回空字符串 ""
+
+- 两个字符串的对比和搜索，典型的滑窗题目，设置滑窗在s中搜索符合t的区间，更新滑窗的过程并更新结果
+  - 1. 使用哈希表存储当前滑窗数据和子串t的元素分布
+  - 2. [left, right)滑窗，移动right指针，将right指针对应的元素更新到滑窗中 **当t中有该元素再更新**
+  - 3. 当滑窗和子串need的某元素分布一致，valid++，更新当前状态
+  - 4. 当valid==need.size 时得到满足条件的滑窗，记录结果，并进行滑窗更新 即**移动左指针**
+    - 移动后，有很多细节需要注意：一个是valid的更新，一个是window数据的更新，仅当左指针的元素是need中元素时才进行上面的更新处理
+- 时间复杂度 O(N)
+
+```
+class Solution {
+public:
+    string minWindow(string s, string t) {
+        unordered_map<char, int> need;
+        for (auto c : t) {
+            need[c]++;
+        }
+        cout << need.size() << endl;
+        unordered_map<char, int> window;
+        int left = 0;
+        int right = 0;
+        int valid = 0; // 辅助判断滑窗是否满足条件
+        int min_l = INT_MAX;
+        string ans;
+        int start = 0;
+        while (right < s.size()) {
+            // s1: 构建窗口
+            char c = s[right];
+            right++;
+            // 细节1
+            if(need.count(c)) {
+                window[c]++; // 加入滑窗
+                if(window[c] == need[c]) // 某一元素满足条件
+                    valid++;
+            }
+            //printf( "1 window: [%d, %d)\n", left, right);
+            // s2 : 更新滑窗数据， 更新结果
+            // 细节2
+            while (valid == need.size()) {
+                if (right - left < min_l) {
+                    min_l = right - left;
+                    start = left;
+                }
+                char d = s[left];
+                left++;
+                // 移除辅助判断条件  更新当前滑窗状态；
+                // 细节3  只有当target串中有该元素才处理
+                if (need.count(d)) {
+                    if (window[d] == need[d]) {
+                        valid--;
+                    }
+                    window[d]--;
+                }
+            }
+            //printf( "2 window: [%d, %d)\n", left, right);
+
+        }
+        return min_l == INT_MAX ? "" : s.substr(start, min_l);
+    }
+};
+```
+
