--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -18,6 +18,7 @@
 - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
 - [143. 重排链表](#143-重排链表)
 - [23. 合并K个升序链表 [Hard]](#23-合并k个升序链表-hard)
+- [83. 删除排序链表中的重复元素](#83-删除排序链表中的重复元素)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -893,6 +894,48 @@ public:
 };
 ```
 
+### 83. 删除排序链表中的重复元素
+> 存在一个按升序排列的链表，给你这个链表的头节点 head ，请你删除所有重复的元素，使每个元素 只出现一次 。
+
+- 与数组的处理方式一致，维护两个指针p 和 next
+  - **当前后相等时，向后移动next，p不动** 修改p指针的next
+  - 当前后不等时，两个指针都向后移动
+- 时间复杂度 O(N)
+
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* deleteDuplicates(ListNode* head) {
+        if (!head || !head -> next) {
+            return head;
+        }
+        ListNode* p = head;
+        ListNode* next = head -> next;
+        while (next != nullptr) {
+            if (p -> val == next -> val) {
+                p -> next = next -> next;
+                next = next -> next;
+            }
+            else {
+                p = p -> next;
+                next = next -> next;
+            }
+
+        }
+        return head;
+    }
+};
+```
 
 ### 小结
 - 掌握链表的构成方式(单向/双向)
