--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -55,6 +55,9 @@
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
+  - [124. 二叉树中的最大路径和 [Hard]](#124-二叉树中的最大路径和-hard)
+  - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
+  - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
 - [面试](#面试)
 
 <!-- /code_chunk_output -->
@@ -1406,6 +1409,95 @@ public:
 };
 ```
 
+### 958. 二叉树的完全性校验
+- 检查一个二叉树是否为完全二叉树
+- 关键： 确定二叉树出现空节点后是否还会有空节点 （同层）
+- 使用层次遍历进行搜索处理
+- 时间复杂度： O(N) 空间复杂度O(K)
+```
+class Solution {
+public:
+    bool isCompleteTree(TreeNode* root) {
+        queue<TreeNode*> q;
+        q.push(root);
+        bool flag = false;
+        while (!q.empty()) {
+            int sz = q.size();
+            for (int i = 0; i < sz; i++) {
+                TreeNode* cur = q.front();
+                q.pop();
+                if (cur -> left) {
+                    if (flag)
+                        return false;
+                    q.push(cur -> left);
+                }
+                else {
+                    flag = true;
+                }
+                if (cur -> right) {
+                    if (flag)
+                        return false;
+                    q.push(cur -> right);
+                }
+                else {
+                    flag = true;
+                }
+            }
+        }
+        return true; 
+    }
+};
+```
+
+
+### 129. 求根节点到叶子节点数字之和
+> 一个二叉树的根节点 root ，树中每个节点都存放有一个 0 到 9 之间的数字。
+每条从根节点到叶节点的路径都代表一个数字
+
+- 计算从根节点到叶节点生成的 所有数字之和
+- 采用自顶而下的递归方式，因为数字也是这样生成的， `root ->val + val * 10`
+    - 在叶子节点时，返回，并记录结果
+
+
+```
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    vector<int> ans;
+    void dfs(TreeNode* root, int val) {
+        if (!root) {
+            return;
+        }
+        int num = 0;
+        num = val*10 + root -> val;
+        if (!root -> left && !root -> right) {
+            ans.push_back(num);
+            return;
+        }
+        dfs(root -> left, num);
+        dfs(root -> right, num);   
+    }
+    int sumNumbers(TreeNode* root) {
+        dfs(root, 0);
+        int sum = 0;
+        for (auto p : ans) {
+            sum += p;
+            //cout << p << endl;
+        }
+        return sum;
+    }
+};
+```
 
 ## 面试
 - 二叉树的序列化和反序列化
