--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -20,6 +20,7 @@
 - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
 - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
 - [补充. 01串问题](#补充-01串问题)
+- [165.比较版本号 [Medium]](#165比较版本号-medium)
 
 <!-- /code_chunk_output -->
 
@@ -810,6 +811,11 @@ public:
   - **使用哈希表/数组存储出现的次数差与对应的位置**
   - 使用两个遍历维护当前遍历位置为止出现的 0 / 1次数
 
+- https://blog.csdn.net/weixin_41563161/article/details/105635697
+- https://blog.csdn.net/c_circle/article/details/78589130
+
+
+
 
 ```
 int find(string& s) {
@@ -835,8 +841,45 @@ int find(string& s) {
     }
     return ans;
 }
-```
+```
 
-https://blog.csdn.net/weixin_41563161/article/details/105635697
 
-https://blog.csdn.net/c_circle/article/details/78589130
+
+### 165.比较版本号 [Medium]
+> 比较版本号时，请按从左到右的顺序依次比较它们的修订号。比较修订号时，只需比较忽略任何前导零后的整数值 
+
+- 两个字符串的分段比较，关键在于对临界情况对考虑：
+  - 当两个串长度不等，有不同的段时，若长出的段都为0，两个版本还是相等；若长出的段不为0， 两版本长版本大。
+-   **考虑两个版本小数点段不同段情况下的对比，不能在最短串停下遍历**
+    - 而应该两个串都遍历到底，并且长出的部分要跟0做对比
+    - 在分段遍历过程中**直接累计当前段的数值大小**
+- 时间复杂度O(N) 空间复杂度O(1)
+```
+class Solution {
+public:
+    int compareVersion(string version1, string version2) {
+        int p1 = 0;
+        int p2 = 0;
+        int s1 = version1.size();
+        int s2 = version2.size();
+        // 考虑两个版本小数点段不同段情况下的对比，不能在最短串停下遍历
+        // 而应该两个串都遍历到底，并且长出的部分要跟0做对比
+        while (p1 < s1 || p2 < s2) {
+            int a = 0, b =0;
+            while (p1 < s1 && version1[p1] != '.') {
+                a = a * 10 + version1[p1++] - '0';
+            }
+            while (p2 < s2 && version2[p2] != '.') {
+                b = b * 10 + version2[p2++] - '0';
+            }
+            
+            if (a > b) return 1;
+            if (a < b) return -1;
+            p1++;
+            p2++;
+        }
+
+        return 0;
+    }
+};
+```
