--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -19,6 +19,8 @@
 - [143. 重排链表](#143-重排链表)
 - [23. 合并K个升序链表 [Hard]](#23-合并k个升序链表-hard)
 - [83. 删除排序链表中的重复元素](#83-删除排序链表中的重复元素)
+- [补充： 排序奇升偶降链表](#补充-排序奇升偶降链表)
+- [剑指22. 链表中倒数第k个节点](#剑指22-链表中倒数第k个节点)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -936,6 +938,101 @@ public:
     }
 };
 ```
+### 补充： 排序奇升偶降链表
+- https://mp.weixin.qq.com/s/377FfqvpY8NwMInhpoDgsw
+- 链表，奇数位置按序增长，偶数位置按序递减，如何能实现链表从小到大
+  - 1.奇偶分离：偶数位提取
+  - 2. 反转偶链表
+  - 3. 合并两个有序链表即可
+
+
+```
+class ListNode:    
+    def __init__(self, x):        
+        self.val = x        
+        self.next = None
+
+class Solution:    
+    def sortOddEvenList(self,head):     
+        if not head or not head.next:      
+            return head        
+        oddList,evenList = self.partition(head)        
+        evenList = self.reverse(evenList)        
+        return self.merge(oddList,evenList)    
+
+    def partition(self, head: ListNode) -> ListNode:        
+        evenHead = head.next        
+        odd, even = head, evenHead        
+        while even and even.next:            
+            odd.next = even.next            
+            odd = odd.next            
+            even.next = odd.next            
+            even = even.next        
+        odd.next = None        
+        return [head,evenHead]    
+    def reverse(self,head):        
+        dumpy = ListNode(-1)        
+        p = head        
+        while p:            
+            temp = p.next            
+            p.next = dumpy.next            
+            dumpy.next = p            
+            p = temp        
+        return dumpy.next    
+    def merge(self,p,q):        
+        head = ListNode(-1)        
+        r = head        
+        while p and q:            
+            if p.val <= q.val:               
+                r.next = p                
+                p = p.next            
+            else:                
+                r.next = q                
+                q = q.next            
+            r = r.next        
+        if p:            
+            r.next = p        
+        if q:            
+            r.next = q        
+        return head.next
+```
+
+### 剑指22. 链表中倒数第k个节点
+
+> 输入一个链表，输出该链表中倒数第k个节点。 从1开始编号
+
+- 采用快慢指针方法，快慢指针间隔**差k-1个节点**
+  - `count = 1` `count++ < k`
+- 临界情况： 
+  - 当链表长度不超过k时，在初始化快指针位置时会遇到nullptr，需要直接判断并返回slow
+  - 链表为空： return nullptr;
+- 时间复杂度 O(N)
+
+```
+class Solution {
+public:
+    ListNode* getKthFromEnd(ListNode* head, int k) {
+        if (!head)
+            return head;
+        ListNode* fast = head;
+        ListNode* slow = head;
+        int count = 1;
+        while (fast != nullptr) {
+            while (count <= k && fast != nullptr) {
+                fast = fast -> next;
+                count++;
+            }
+            // 当链表长度不超过k(小于/等于k)时
+            if (fast == nullptr)
+                return slow;
+            fast = fast -> next;
+            slow = slow -> next;
+        }
+        return slow;
+    }
+};
+```
+
 
 ### 小结
 - 掌握链表的构成方式(单向/双向)
