--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -58,6 +58,7 @@
   - [124. 二叉树中的最大路径和 [Hard]](#124-二叉树中的最大路径和-hard)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
+  - [543. 二叉树的直径](#543-二叉树的直径)
 - [面试](#面试)
 
 <!-- /code_chunk_output -->
@@ -1495,6 +1496,35 @@ public:
             //cout << p << endl;
         }
         return sum;
+    }
+};
+```
+
+
+### 543. 二叉树的直径
+
+> 给定一棵二叉树，你需要计算它的直径长度。一棵二叉树的直径长度是任意两个结点路径长度中的最大值。**这条路径可能穿过也可能不穿过根结点**
+
+- 与**[124.二叉树中的最大路径和]**有一定相似性，
+  - **自底而上的逻辑**，计算当前节点的左右节点数量，并更新结果；
+  - 递归返回左右子树的最大值
+  - 最后的答案需要-1， 因为是两个节点间的中间边的数量
+```
+class Solution {
+public:
+    int ans = 0;
+    int diameter(TreeNode* root) {
+        if (!root) {
+            return 0;
+        }
+        int l = diameter(root -> left);
+        int r = diameter(root -> right);
+        ans = max(ans, l + r + 1);
+        return max(l, r) + 1;
+    }
+    int diameterOfBinaryTree(TreeNode* root) {
+        diameter(root);
+        return ans - 1;
     }
 };
 ```
