--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -21,6 +21,8 @@
 - [83. 删除排序链表中的重复元素](#83-删除排序链表中的重复元素)
 - [补充： 排序奇升偶降链表](#补充-排序奇升偶降链表)
 - [剑指22. 链表中倒数第k个节点](#剑指22-链表中倒数第k个节点)
+- [234. 回文链表 [*]](#234-回文链表-)
+- [2. 两数相加](#2-两数相加)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -1033,6 +1035,91 @@ public:
 };
 ```
 
+### 234. 回文链表 [*]
+- 给定一个单向链表判断是否为回文链表
+- 经典的链表操作题目，关键点在于找到链表中点，然后从中向两侧进行遍历；
+- 当然也可以借助辅助的空间，如*提前把数据通过列表存下来等*
+- 基于链表的操作：
+  - 通过快慢指针寻找链表中点：最后slow指针位于偶数长度的右中点；位于奇数长度的中点；
+  - **可以通过fast指针是否为null**来判断是否为偶/奇数长度
+  - 并在slow指针移动的时候进行链表反转，最后得到前后两部分的链表头部
+  - 然后进行节点逐一对比即可
+```
+class Solution {
+public:
+    bool isPalindrome(ListNode* head) {
+        if (head == nullptr)
+            return true;
+        ListNode* slow = head;
+        ListNode* fast = head;
+        // 快慢指针寻找中点
+        ListNode* pred = nullptr;
+        ListNode* next = nullptr;
+        while (fast != nullptr && fast -> next != nullptr) {
+            fast = fast -> next -> next;
+            // 反转慢指针遍历过的半区
+            next = slow -> next;
+            slow -> next = pred;
+            pred = slow;
+            slow = next;
+        }
+        // 考虑奇数长度的情况，将slow前移
+        if(fast != nullptr) {
+            slow = slow -> next;
+        }
+        while (pred != nullptr && slow != nullptr) {
+            if (pred -> val != slow -> val) {
+                return false;
+            }
+            pred = pred -> next;
+            slow = slow -> next;
+        }
+        return true;
+    }
+};
+```
+
+### 2. 两数相加
+> 给你两个 非空 的链表，表示两个非负的整数。它们每位数字都是按照 逆序 的方式存储的，并且每个节点只能存储 一位 数字
+- 采用原地相加的方式进行，从低位向高位加，需要注意的是向高位增加的1的处理，最后可能需要开辟新空间来存储
+```
+class Solution {
+public:
+    ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
+        ListNode* p1 = l1;
+        ListNode* p2 = l2;
+        ListNode* phead = new ListNode();
+        ListNode* p = phead;
+        if (p1 == nullptr) return l2;
+        if (p2 == nullptr) return l1;
+        int up = 0;
+        while (p1 != nullptr || p2 != nullptr) {
+            int a = (p1 == nullptr) ? 0 : p1 -> val;
+            int b = (p2 == nullptr) ? 0 : p2 -> val;
+            
+            int tmp = a + b + up;
+            up = tmp / 10 == 1 ? 1 : 0;
+            if (p1 == nullptr) {
+                p2 -> val = tmp % 10;
+                p -> next = p2;
+                p2 = p2 -> next;
+            }    
+            else {
+                p1 -> val = tmp % 10;
+                p -> next = p1;
+                p1 = p1 -> next;
+                if (p2 != nullptr) p2 = p2 -> next;
+            }
+            p = p -> next;
+        }
+        if (up == 1) {
+            ListNode* f = new ListNode(up);
+            p -> next = f;
+        }
+        return phead -> next;
+    }
+};
+```
 
 ### 小结
 - 掌握链表的构成方式(单向/双向)
