--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -21,6 +21,9 @@
 - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
 - [补充. 01串问题](#补充-01串问题)
 - [165.比较版本号 [Medium]](#165比较版本号-medium)
+- [8. 字符串转整数(atoi)](#8-字符串转整数atoi)
+- [7. 整数反转](#7-整数反转-1)
+- [151. 翻转字符串的单词](#151-翻转字符串的单词)
 
 <!-- /code_chunk_output -->
 
@@ -880,6 +883,125 @@ public:
         }
 
         return 0;
+    }
+};
+```
+
+### 8. 字符串转整数(atoi)
+- 题中有较多边界条件
+- 为了实现简单，可以先找到首个合法字符，从首个合法字符开始判断，避免中间又出现非法字符
+  - `start == i && s[i]`
+```
+class Solution {
+public:
+    int myAtoi(string s) {
+        int sign = 1;
+        int res = 0;
+        bool digit = false;
+        int start = 0;
+        while(start < s.size() && s[start] == ' '){
+            start++;
+        }
+        
+        for (int i = start; i < s.size(); i++) {
+            if (start == i && s[i] == '-') {
+              
+                sign = -1;
+                digit = true;
+                
+            }
+            else if (start == i && s[i] == '+') {
+                
+                sign = 1;
+                digit = true;
+            }
+            else if (isdigit(s[i])) {     
+                int num = s[i] - '0';
+                if (res > INT_MAX/10 || (res == INT_MAX/10 && num > 7)) {
+                    return INT_MAX;
+                }  
+                if (res < INT_MIN/10 || (res == INT_MIN/10 && num > 8)) {
+                    return INT_MIN;
+                }
+                res = res*10 + sign*num;
+            }
+            else {
+                break;
+            }
+        }
+        return res;
+    }
+};
+```
+
+### 7. 整数反转
+> 给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果。
+如果反转后整数超过 32 位的有符号整数的范围 [−231,231 − 1] ，就返回 0。
+
+- 考虑反转后是否会溢出的问题：
+  - **使用ans 和INT_MIN / INT_MAX的判断，提前判断*10前是否会溢出， 正数最大值个位为7 ， 负数为8**
+
+
+```
+class Solution {
+public:
+    int reverse(int x) {
+        int ans = 0;
+        while (x) {
+            int tmp = x % 10;
+            x /= 10;
+            if ((ans > INT_MAX/10) || (ans == INT_MAX / 10 && tmp > 7)) {
+                return 0;
+            } 
+            if ((ans < INT_MIN/10) || (ans == INT_MIN / 10 && tmp < -8)) {
+                return 0;
+            } 
+            ans = ans * 10 + tmp;
+        }
+        return ans;
+    }
+};
+```
+
+### 151. 翻转字符串的单词
+> 给定一个字符串，逐个翻转字符串中的每个单词
+> 无空格字符构成一个单词。输入字符串可以在前面或者后面包含多余的空格，但是反转后的字符不能包括。
+
+
+- 关键点：去除空格以及字符串翻转
+- 1. 首先进行翻转，得到整体翻转后的字符串
+- 2. **对于翻转后的字符串，要去除多余的空格，保持每个单词间仅有一个空格**，且在单词内部进行翻转
+  - 将空格都移动到字符串尾部，首先进行单词内部移动，调整空格； idx 
+  - 然后进行内部翻转 reverse
+- 时间复杂度 O(N) 空间复杂度 O(1)
+
+```
+class Solution {
+public:
+    string reverseWords(string s) {
+        reverse(s.begin(), s.end());
+        // 删除空格
+        // 单词级别反转
+        int n = s.size();
+        int idx = 0; // 按照格式去除空格的指针
+        int start = 0; // 字符串指针
+        while (start < n) {
+            if (s[start] != ' ') {
+                if (idx != 0) // 首个单词头不需要空格 
+                    s[idx++] = ' '; 
+                int end = start;
+                while (end < n && s[end] != ' ') s[idx++] = s[end++];
+                reverse(s.begin() + idx - (end - start) , s.begin() + idx);
+                start = end;
+            }
+            else {
+                start++;
+            }
+        }
+        // 去除空格
+        s.erase(s.begin() + idx, s.end());
+        return s;
+
     }
 };
 ```
