--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -23,6 +23,7 @@
 - [剑指22. 链表中倒数第k个节点](#剑指22-链表中倒数第k个节点)
 - [234. 回文链表 [*]](#234-回文链表-)
 - [2. 两数相加](#2-两数相加)
+- [19. 除链表的倒数第 N 个结点](#19-除链表的倒数第-n-个结点)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -1120,6 +1121,46 @@ public:
     }
 };
 ```
+### 19. 除链表的倒数第 N 个结点
+> 删除链表的倒数第 n 个结点，并且返回链表的头结点。
+
+- 快慢指针法，由于n从1开始编号，**可以先找到倒数第n+1个节点，即fast指针多走n步即可**  1 2 3 4 5 当fast多走一步时，slow指向的即为倒数第2个节点；同理指向倒数（x+1）节点
+- 之后快慢指针共同移动直到到尾部，这个时候可以将slow后面的节点删掉
+- **临界情况： 当链表长度小于n时，需要删除头节点，进行判断**
+
+```
+class Solution {
+public:
+    ListNode* removeNthFromEnd(ListNode* head, int n) {
+        // 临界情况
+        if (!head) {
+            return nullptr;
+        }
+        ListNode* slow = head;
+        ListNode* fast = head;
+        while( fast -> next != nullptr && n > 0) {
+                fast = fast -> next;
+                n--;
+        }
+        while (fast -> next != nullptr) {
+            slow = slow -> next;
+            fast = fast -> next;
+        }
+        
+        if (n == 0) {
+            if (slow -> next != nullptr)
+                slow -> next = slow -> next -> next;   
+        }
+        // 临界情况，需要删除头节点
+        else {
+            head = slow -> next;
+        }
+        return head;
+    }
+};
+```
+
+
 
 ### 小结
 - 掌握链表的构成方式(单向/双向)
