--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -1,6 +1,30 @@
 
 [TOC]
 ## 动态规划
+
+### 剑指10-1.斐波那契数列
+
+- 最经典的动态规划问题： f[n] = f[n-1] + f[n-2]  n>1
+- 通过两个状态记录即可
+- **需要注意的是要避免越界，根据提示在计算加和的时候进行模操作**
+```
+class Solution {
+public:
+    int fib(int n) {
+        int pred = 0;
+        int cur = 1;
+        if (n == 0)
+            return 0;
+        while (n > 1) {
+            int tmp = cur;
+            cur = (cur + pred) % (1000000007);
+            pred = tmp;
+            n--;
+        }
+        return cur % (1000000007);
+    }
+};
+```
 ### 70. 爬楼梯问题
 - 递归公式：f(n)=f(n-1)+f(n-2) 递归解法会超时
 - 使用简单的动态规划解决
@@ -1026,4 +1050,32 @@ public:
 };
 ```
 
-### 
+###  1143. 最长公共子序列 *
+- 教科书式经典dp问题
+> 给定两个字符串 text1 和 text2，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 0 。
+一个字符串的 子序列 是指这样一个新的字符串：它是由**原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串**
+
+- 定义`dp[i][j]`表示**子串text1[0:i）和text2[0:j）的公共子序列的最长长度**
+    - 状态转移公式： dp[i][j] = dp[i-1][j-1]+ 1  当text1[i] == text2[j]
+      - `dp[i][j] = max(dp[i-1][j], dp[i][j-1])`
+```
+class Solution {
+public:
+    int longestCommonSubsequence(string text1, string text2) {
+        int n1 = text1.size();
+        int n2 = text2.size();
+        vector<vector<int> > dp(n1 + 1, vector<int>(n2 + 1));
+        for (int i = 1; i <= n1; i++) {
+            for (int j = 1; j <= n2; j++) {
+                if (text1[i - 1] == text2[j - 1]) {
+                    dp[i][j] = dp[i - 1][j - 1] + 1;
+                }
+                else {
+                    dp[i][j] = max(dp[i - 1][j], dp[i][j - 1]);
+                }
+            }
+        }
+        return dp[n1][n2];
+    }
+};
+```
