--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -516,3 +516,70 @@ public:
     }
 };
 ```
+
+### 补充题：最多覆盖点问题 [百度/美团]
+
+> 数轴上从左到右有n个点a[0],a[1]…,a[n-1]，给定一根长度为L的绳子，求绳子最多能覆盖其中的几个点。要求算法复杂度为o(n)， 空间复杂度为O(1)
+
+- 双指针法，滑窗进行
+- 当**当前窗口长度大于最大长度时**，更新结果 `right - left`， 并移动左指针； 否则移动右指针
+
+```
+长度： 3 ； 6个数字
+3 6
+1 2 5 6 8 9
+```
+
+```
+int maxPoints(vector<int>& nums, int len) {
+    int ans = 0;
+    int left = 0;
+    int right = 0;
+    while (right < nums.size()) {
+        if ( (nums[right] - nums[left]) > len) {
+            ans = max(ans, right - left);
+            left++;
+        }
+        else {
+            right++;
+        }
+        //cout << "l : " << left << " r :" << right << " " << ans << endl;
+    }
+    cout << ans << endl;
+    return ans;
+}
+```
+
+### 498. 对角线遍历 
+> 给定一个含有 M x N 个元素的矩阵（M 行，N 列），请以对角线遍历的顺序返回这个矩阵中的所有元素
+
+- 与螺旋矩阵遍历有相似之处，都在考察对数组和矩阵的基本操作逻辑
+- 对角线遍历方式： **即保持： （x+y = k） 控制x 和 y 不超过合法范围即可**
+
+```
+class Solution {
+public:
+    vector<int> findDiagonalOrder(vector<vector<int>>& mat) {
+        // x + y = k.  k = [0, 2n-1]
+        vector<int> ans;
+        int m = mat.size();
+        int n = mat[0].size(); 
+        for (int k = 0; k < max(m, n) * 2 - 1; k++) {
+            // 向上遍历
+            if (k % 2 == 0) {
+                for (int row = min(k, m - 1); row >= 0 && (k - row) < n; row--) {
+                    //cout << row << k - row << endl;
+                    ans.push_back(mat[row][k - row]);
+                }
+            }
+            else {
+                for (int col = min(k, n - 1); col >= 0 && (k - col) < m ; col--) {
+                    //cout << k - col << col << endl;
+                    ans.push_back(mat[k - col][col]);
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
