--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -13,7 +13,7 @@
 - [234. 回文链表判断](#234-回文链表判断)
 - [141. 环形链表操作](#141-环形链表操作)
 - [142. 环形链表2 [Medium]](#142-环形链表2-medium)
-- [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
+- [328. 奇偶数组  [Medium]](#328-奇偶数组-medium)
 - [160. 相交链表](#160-相交链表)
 - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
 - [143. 重排链表](#143-重排链表)
@@ -21,9 +21,10 @@
 - [83. 删除排序链表中的重复元素](#83-删除排序链表中的重复元素)
 - [补充： 排序奇升偶降链表](#补充-排序奇升偶降链表)
 - [剑指22. 链表中倒数第k个节点](#剑指22-链表中倒数第k个节点)
-- [234. 回文链表 [*]](#234-回文链表-)
+- [234. 回文链表 [*]](#234-回文链表)
 - [2. 两数相加](#2-两数相加)
 - [19. 除链表的倒数第 N 个结点](#19-除链表的倒数第-n-个结点)
+- [82. 删除排序链表中的重复元素II **](#82-删除排序链表中的重复元素ii)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -1159,7 +1160,46 @@ public:
     }
 };
 ```
+### 82. 删除排序链表中的重复元素II **
+> 存在一个**按升序排列的链表**，给你这个链表的头节点 head ，请你**删除链表中所有存在数字重复情况的节点**，只保留原始链表中 没有重复出现 的数字。
 
+- 与82题相比，情况更复杂一些，要删除所有重复的，而不是只保留一个元素
+- 仍然是通过指针一次遍历即可完成，但需要注意细节
+  - 设置**prev**  **cur**指针，用于进行逻辑控制
+  - 设置dummy节点，**避免head节点也被删除的特殊情况处理** phead -> next = head； 
+  - 当未重复时 `prev -> next == cur`，正常向后移动prev 
+  - 当出现重复时 `prev -> next != cur`，**调整prev指针next方向**
+  - 上面判断是否重复，是个非常简单有效的方法
+- 时间复杂度 O(N)
+
+```
+class Solution {
+public:
+    ListNode* deleteDuplicates(ListNode* head) {
+        ListNode* phead = new ListNode();
+        phead -> next = head;
+        ListNode* prev =phead;
+        ListNode* cur = head;
+        while (cur) {
+            // 跳过重复段
+            while (cur -> next != nullptr && cur -> val == cur -> next -> val) {
+                cur = cur -> next;
+                
+            }
+            // 当前后相连的时候，说明没有重复，正常移动
+            if (prev -> next == cur) {
+              prev = prev -> next;
+            }
+            else {// 需要删除重复，移动prev的指针
+                prev -> next = cur -> next;
+            }
+            cur = cur -> next;
+        }
+        // 
+        return phead -> next;
+    }
+};
+```
 
 
 ### 小结
