--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -3,27 +3,29 @@
 
 <!-- code_chunk_output -->
 
-- [344.反转字符串](#344反转字符串)
-- [7. 整数反转](#7-整数反转)
-- [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
-- [字符的有效异位符](#字符的有效异位符)
-- [125. 回文串验证](#125-回文串验证)
-- [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
-- [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找-)
-- [38.外观数列](#38外观数列)
-- [14. 最长公共前缀](#14-最长公共前缀)
-- [49. 字母异位词组合](#49-字母异位词组合)
-- [3. 无重复字符的最长子串 [Medium] [Tencent]](#3-无重复字符的最长子串-medium-tencent)
-- [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
-- [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
-- [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
-- [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
-- [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
-- [补充. 01串问题](#补充-01串问题)
-- [165.比较版本号 [Medium]](#165比较版本号-medium)
-- [8. 字符串转整数(atoi)](#8-字符串转整数atoi)
-- [7. 整数反转](#7-整数反转-1)
-- [151. 翻转字符串的单词](#151-翻转字符串的单词)
+  - [344.反转字符串](#344反转字符串)
+  - [7. 整数反转](#7-整数反转)
+  - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
+  - [字符的有效异位符](#字符的有效异位符)
+  - [125. 回文串验证](#125-回文串验证)
+  - [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
+  - [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找)
+  - [38.外观数列](#38外观数列)
+  - [14. 最长公共前缀](#14-最长公共前缀)
+  - [49. 字母异位词组合](#49-字母异位词组合)
+  - [3. 无重复字符的最长子串 [Medium] [Tencent]](#3-无重复字符的最长子串-medium-tencent)
+  - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
+  - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
+  - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard)
+  - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
+  - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
+  - [补充. 01串问题](#补充-01串问题)
+  - [165.比较版本号 [Medium]](#165比较版本号-medium)
+  - [8. 字符串转整数(atoi)](#8-字符串转整数atoi)
+  - [7. 整数反转](#7-整数反转-1)
+  - [151. 翻转字符串的单词](#151-翻转字符串的单词)
+- [14. 最长公共前缀](#14-最长公共前缀-1)
+  - [242. 有效的字母异位词](#242-有效的字母异位词)
 
 <!-- /code_chunk_output -->
 
@@ -1002,6 +1004,66 @@ public:
         s.erase(s.begin() + idx, s.end());
         return s;
 
+    }
+};
+```
+## 14. 最长公共前缀
+> 编写一个函数来查找字符串数组中的最长公共前缀。如果不存在公共前缀，返回空字符串 ""
+
+- 遍历数组中的所有最短字符串，取最短字符串的长度；
+- 从0开始循环遍历各串同一位置上是否相等
+- 时间复杂度 O(NM)
+```
+class Solution {
+public:
+    string longestCommonPrefix(vector<string>& strs) {
+        if (strs.empty())
+            return "";
+        int min_l = INT_MAX;
+        for (auto s : strs) {
+            int a =  s.size();
+            min_l = min(min_l, a);
+        }
+        int end = 0;
+        bool flag = true;
+        for (int i = 0; i < min_l; i++) {
+            for (int j = 1; j < strs.size(); j++) {
+                if (strs[j][i] != strs[j-1][i]) {
+                    flag = false;
+                    break;
+                }
+            }
+            if (flag)
+                end++;
+            else {
+                break;
+            }
+        }
+        return strs[0].substr(0, end);
+    }
+};
+```
+
+###  242. 有效的字母异位词 
+> 给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
+
+- 排序或者哈希表即可
+
+```
+class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        if (s.size() != t.size()) {
+            return false;
+        }
+        unordered_map<char, int> records;
+        sort(s.begin(), s.end());
+        sort(t.begin(), t.end());
+        for (int i = 0; i < s.size(); i++) {
+            if (s[i] != t[i])
+                return false;
+        }
+        return true;
     }
 };
 ```
